--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
