--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
     "mongoose": "^9.0.0",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-responsive-carousel": "^3.2.23"
@@ -25,6 +25,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "baseline-browser-mapping": "^2.9.4",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
