--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@headlessui/react": "^2.2.9",
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
+    "mailgun.js": "^12.4.0",
     "mongoose": "^9.0.0",
     "next": "^16.0.7",
+    "nodemailer": "^7.0.12",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-responsive-carousel": "^3.2.23"
@@ -23,6 +25,7 @@
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
